samples/_failures_safe/1761085275_b50cac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d106e0e9.c: In function ‘main’:
./samples/SAFE/__tmp_d106e0e9.c:148:21: error: expected expression at end of input
  148 |                     result[i][j] = matrix1[j][
      |                     ^~~~~~
./samples/SAFE/__tmp_d106e0e9.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d106e0e9.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d106e0e9.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d106e0e9.c:148:21: error: expected declaration or statement at end of input
